# pr-surgeon

./: .gitignore  AGENTS.md  DEMO_PR.md  FRONTEND_INSTRUCTIONS.md  LICENSE  README.md  SUBMISSION.md  arquitectura.md  globals.css  layout.tsx  test_django_pr.ps1
backend/: .env.example  __init__.py  main.py  pyproject.toml
backend/models/: __init__.py  analysis.py  api.py  pr.py  subpr.py
backend/services/: __init__.py  decomposer.py  dependency_analyzer.py  github_client.py  llm_service.py
backend/services/parsers/: __init__.py  generic_parser.py  js_parser.py  python_parser.py
backend/tests/: __init__.py  test_api_analyze.py  test_decomposer.py  test_dependency_analyzer.py  test_github_client.py  test_llm_service.py  test_smoke.py
bob_sessions/: 00_context_loading.md  01_context_loading.md  02_github_client.md  03_dependency_analyzer_architecture.md  05_backend.md  05_dependency_analyzer_architecture.md
demo_data/: django_18056_response.json
demo_data/enrichments/: 2512b7ab9393.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  page_LANDING.tsx
frontend/app/analysis/: page.tsx
