[project]
name = "pr-surgeon-backend"
version = "0.1.0"
description = "Backend API for PR Surgeon - decompose monster Pull Requests into safe, reviewable sub-PRs"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Dievalivann", email = "team@dievalivann.dev" }
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "PyGithub>=2.1.0",
    "networkx>=3.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["services", "services.parsers", "models", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true